BEVIDAB-132 - fixed careers overlap on mobile

--- a/web/app/themes/bevi/resources/assets/styles/components/_careers.scss
+++ b/web/app/themes/bevi/resources/assets/styles/components/_careers.scss
@@ -33,7 +33,12 @@
 .whr-title {
   @apply text-blue-600 font-medium text-2xl;
   margin: 2rem 0;
-  line-height: 2.25;
+  line-height: 1;
+
+  @screen md {
+    @apply text-2xl;
+    line-height: 2.25;
+  }
   
   &:hover {
     @apply underline;
